// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ThemeSignOffArchive > should match snapshot after loading 1`] = `
<div>
  <!---->
  <div
    class="flex gap-4"
  >
    <div
      class="flex items-center justify-center"
    >
      <div
        class="bg-pink-50 p-2 rounded-md"
      >
        <svg
          class="fill-pink-700"
          height="1.8rem"
          role="img"
          viewBox="0 -960 960 960"
          width="1.8rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <!---->
          <path
            d="M856-390 570-104q-12 12-27 18t-30 6q-15 0-30-6t-27-18L103-457q-11-11-17-25.5T80-513v-287q0-33 23.5-56.5T160-880h287q16 0 31 6.5t26 17.5l352 353q12 12 17.5 27t5.5 30q0 15-5.5 29.5T856-390ZM513-160l286-286-353-354H160v286l353 354ZM260-640q25 0 42.5-17.5T320-700q0-25-17.5-42.5T260-760q-25 0-42.5 17.5T200-700q0 25 17.5 42.5T260-640Zm220 160Z"
            xmlns="http://www.w3.org/2000/svg"
          />
          
          <!---->
        </svg>
        <!---->
      </div>
    </div>
    <!---->
     
    <div
      class="grow"
    >
      <!---->
      <h1
        class="text-neutral-700 text-2xl"
        style=""
      >
        <!---->
        Theme Sign Off
        
        
      </h1>
      
      <!---->
       
      <p
        class="text-neutral-600 text-md"
      >
        Finalise themes to use for AI to map responses to
      </p>
      <!---->
    </div>
     
    <!---->
  </div>
  <!---->
   
  <hr
    class="my-6"
  />
   
  <!---->
  <section>
    <div
      class="h-full my-4 p-4 rounded-2xl border border-secondary bg-neutral-50"
      data-testid="panel-component"
    >
      <div
        class="px-2 sm:px-8 md:px-16"
      >
        <ol
          aria-label="Consultation progress"
          class="px-1 flex items-center justify-around gap-4 text-xs text-center text-neutral-700 mb-8 w-3/4 mx-auto overflow-x-auto"
        >
          <li>
            <div
              class="flex min-w-16 flex-col items-center"
            >
              <div
                class="my-2 rounded-full p-2 bg-secondary"
              >
                <svg
                  class="fill-white"
                  height="1.2rem"
                  role="img"
                  viewBox="0 -960 960 960"
                  width="1.2rem"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <!---->
                  <path
                    d="m424-296 282-282-56-56-226 226-114-114-56 56 170 170Zm56 216q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z"
                    xmlns="http://www.w3.org/2000/svg"
                  />
                  
                  <!---->
                </svg>
                <!---->
              </div>
               
              <h3
                class="text-xs"
              >
                Consultation Overview
              </h3>
            </div>
            <!---->
          </li>
          <li>
            <div
              class="flex min-w-16 flex-col items-center"
            >
              <div
                class="my-2 rounded-full p-2 bg-secondary ring-4 ring-teal-100"
              >
                <svg
                  class="fill-white"
                  height="1.2rem"
                  role="img"
                  viewBox="0 -960 960 960"
                  width="1.2rem"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <!---->
                  <path
                    d="m424-296 282-282-56-56-226 226-114-114-56 56 170 170Zm56 216q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z"
                    xmlns="http://www.w3.org/2000/svg"
                  />
                  
                  <!---->
                </svg>
                <!---->
              </div>
               
              <h3
                class="text-xs text-secondary"
              >
                Theme Sign Off
              </h3>
            </div>
            <!---->
          </li>
          <li>
            <div
              class="flex min-w-16 flex-col items-center"
            >
              <div
                class="my-2 rounded-full p-2 bg-neutral-200"
              >
                <svg
                  class="fill-neutral-500"
                  height="1.2rem"
                  role="img"
                  viewBox="0 -960 960 960"
                  width="1.2rem"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <!---->
                  <path
                    d="m176-120-56-56 301-302-181-45 198-123-17-234 179 151 216-88-87 217 151 178-234-16-124 198-45-181-301 301Zm24-520-80-80 80-80 80 80-80 80Zm355 197 48-79 93 7-60-71 35-86-86 35-71-59 7 92-79 49 90 22 23 90Zm165 323-80-80 80-80 80 80-80 80ZM569-570Z"
                    xmlns="http://www.w3.org/2000/svg"
                  />
                  
                  <!---->
                </svg>
                <!---->
              </div>
               
              <h3
                class="text-xs"
              >
                AI Theme Mapping
              </h3>
            </div>
            <!---->
          </li>
          <li>
            <div
              class="flex min-w-16 flex-col items-center"
            >
              <div
                class="my-2 rounded-full p-2 bg-neutral-200"
              >
                <svg
                  class="fill-neutral-500"
                  height="1.2rem"
                  role="img"
                  viewBox="0 -960 960 960"
                  width="1.2rem"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <!---->
                  <path
                    d="M200-120q-33 0-56.5-23.5T120-200v-640h80v640h640v80H200Zm40-120v-360h160v360H240Zm200 0v-560h160v560H440Zm200 0v-200h160v200H640Z"
                    xmlns="http://www.w3.org/2000/svg"
                  />
                  
                  <!---->
                </svg>
                <!---->
              </div>
               
              <h3
                class="text-xs"
              >
                Analysis Dashboard
              </h3>
            </div>
            <!---->
          </li>
          
        </ol>
         
        <div
          class="px-0 md:px-16"
        >
          <h2
            class="text-center text-secondary"
          >
            Finalising Themes
          </h2>
           
          <p
            class="my-4 text-center text-sm text-neutral-500"
          >
            Review and sign off themes for each consultation question.
    0 of 3 questions signed off.
          </p>
           
          <p
            class="my-4 text-center text-sm text-neutral-500"
          >
            <strong>
              Next:
            </strong>
             Once all questions are signed off, you can confirm and
    proceed to AI mapping.
          </p>
          <!---->
        </div>
      </div>
      <!---->
    </div>
    <!---->
     
    <!---->
    
    <!---->
  </section>
  
  <!---->
   
  <section
    class="my-8"
  >
    <div
      class="my-2"
      id="onboarding-step-1"
    >
      <div
        class="flex gap-4"
      >
        <div
          class="flex items-center justify-center"
        >
          <div
            class="bg-pink-50 p-2 rounded-md"
          >
            <svg
              class="fill-pink-700"
              height="1.3rem"
              role="img"
              viewBox="0 -960 960 960"
              width="1.3rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <!---->
              <path
                d="M478-240q21 0 35.5-14.5T528-290q0-21-14.5-35.5T478-340q-21 0-35.5 14.5T428-290q0 21 14.5 35.5T478-240Zm-36-154h74q0-33 7.5-52t42.5-52q26-26 41-49.5t15-56.5q0-56-41-86t-97-30q-57 0-92.5 30T342-618l66 26q5-18 22.5-39t53.5-21q32 0 48 17.5t16 38.5q0 20-12 37.5T506-526q-44 39-54 59t-10 73Zm38 314q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z"
              />
              
              <!---->
            </svg>
            <!---->
          </div>
        </div>
        <!---->
         
        <div
          class="grow"
        >
          <!---->
          <h2
            class="text-neutral-700 text-lg"
            style=""
          >
            <!---->
            All consultation questions
            
            
          </h2>
          
          <!---->
           
          <p
            class="text-neutral-600 text-sm"
          >
            Browse or search through all questions in this consultation.
          </p>
          <!---->
        </div>
         
        <div>
          <p
            slot="aside"
          >
            3 questions
          </p>
          <!---->
        </div>
        <!---->
      </div>
      <!---->
    </div>
     
    <div
      class="h-full my-4 p-4 rounded-2xl border border-gray-200 bg-neutral-50"
      data-testid="panel-component"
    >
      <!---->
      <div>
        <div
          class="relative"
        >
          <label
            class="sr-only"
            for="search-input"
          >
            Search
          </label>
           
          <input
            class="h-9 w-full p-1 border border-gray-300 rounded-sm focus:outline-2 focus:outline-yellow-300 pl-8 pr-4 svelte-1auzwdn"
            id="search-input"
            placeholder="Search..."
            type="text"
          />
           
          <!---->
           
          <div
            class="absolute left-2 top-1/2 mt-0.5 -translate-y-1/2 transform"
          >
            <svg
              class="fill-neutral-400"
              height="1.2rem"
              role="img"
              viewBox="0 -960 960 960"
              width="1.2rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M784-120 532-372q-30 24-69 38t-83 14q-109 0-184.5-75.5T120-580q0-109 75.5-184.5T380-840q109 0 184.5 75.5T640-580q0 44-14 83t-38 69l252 252-56 56ZM380-400q75 0 127.5-52.5T560-580q0-75-52.5-127.5T380-760q-75 0-127.5 52.5T200-580q0 75 52.5 127.5T380-400Z"
                xmlns="http://www.w3.org/2000/svg"
              />
              <!---->
            </svg>
            <!---->
          </div>
          <!---->
        </div>
        <!---->
         
        <div
          class="mb-4"
        >
          <!---->
          <div
            class="bg-white"
          >
            <!---->
            <!---->
            <!---->
            <!---->
            <div
              aria-label="Click to view question: What measures should we consider to better support and increase rural affordable housing?"
              class="transition-colors duration-300 block rounded-xl cursor-pointer hover:bg-gray-200"
              data-testid="Click to view question: What measures should we consider to better support and increase rural affordable housing?"
              role="button"
              tabindex="0"
              title="Q1: What measures should we consider to better support and increase rural affordable housing?"
            >
              <!---->
              <!---->
              <div
                class="h-full my-4 p-4 rounded-2xl border border-gray-200"
                data-testid="panel-component"
              >
                <article
                  class="flex gap-2 items-start relative flex-col-reverse sm:flex-row"
                >
                  <div
                    class="mt-0.5 hidden sm:block"
                  >
                    <div
                      data-testid="question-icon"
                    >
                      <svg
                        class="fill-secondary"
                        height="1.3rem"
                        role="img"
                        viewBox="0 -960 960 960"
                        width="1.3rem"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <!---->
                        <path
                          d="M478-240q21 0 35.5-14.5T528-290q0-21-14.5-35.5T478-340q-21 0-35.5 14.5T428-290q0 21 14.5 35.5T478-240Zm-36-154h74q0-33 7.5-52t42.5-52q26-26 41-49.5t15-56.5q0-56-41-86t-97-30q-57 0-92.5 30T342-618l66 26q5-18 22.5-39t53.5-21q32 0 48 17.5t16 38.5q0 20-12 37.5T506-526q-44 39-54 59t-10 73Zm38 314q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z"
                        />
                        
                        <!---->
                      </svg>
                      <!---->
                    </div>
                    <!---->
                  </div>
                   
                  <div
                    class="grow"
                    data-testid="horizontal-container"
                  >
                    <p
                      class="text-md leading-6"
                    >
                      <!---->
                      <!---->
                      Q1: What measures should we consider to better support and increase rural affordable housing?
                      
                      
                      <!---->
                    </p>
                     
                    <div
                      class="text-sm leading-6 whitespace-nowrap"
                    >
                      125 responses
                    </div>
                     
                    <!---->
                    <!---->
                  </div>
                   
                  <div
                    class="-ml-2 sm:ml-0 -mt-1"
                  >
                    <div
                      class="flex items-center gap-1"
                    >
                      <div
                        class="ml-2 md:ml-0"
                      >
                        <!---->
                        <div />
                        
                        <!---->
                      </div>
                      <!---->
                       
                      <div
                        data-testid="fav-button"
                      >
                        <div>
                          <!---->
                          <button
                            aria-pressed="false"
                            class="text-md cursor-pointer rounded-md py-1 px-2 border border-transparent transition-colors duration-300 self-start inline-flex gap-1 items-center hover:bg-gray-100 svelte-1d0mdzt"
                            data-variant="ghost"
                            role="button"
                            tabindex="0"
                          >
                            <!---->
                            <!---->
                            <svg
                              class="fill-gray-500"
                              height="1.3rem"
                              role="img"
                              viewBox="0 -960 960 960"
                              width="1.3rem"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <!---->
                              <path
                                d="m354-287 126-76 126 77-33-144 111-96-146-13-58-136-58 135-146 13 111 97-33 143ZM233-120l65-281L80-590l288-25 112-265 112 265 288 25-218 189 65 281-247-149-247 149Zm247-350Z"
                              />
                              
                              <!---->
                            </svg>
                            
                            
                            
                          </button>
                          
                          <!---->
                        </div>
                      </div>
                    </div>
                    <!---->
                  </div>
                </article>
                <!---->
              </div>
              
              
              
            </div>
            
            
            
            
            <!---->
          </div>
          <div
            class="bg-white"
          >
            <!---->
            <!---->
            <!---->
            <!---->
            <div
              aria-label="Click to view question: Are there other ways in which we can ensure that development supports and does not compromise food production?"
              class="transition-colors duration-300 block rounded-xl cursor-pointer hover:bg-gray-200"
              data-testid="Click to view question: Are there other ways in which we can ensure that development supports and does not compromise food production?"
              role="button"
              tabindex="0"
              title="Q2: Are there other ways in which we can ensure that development supports and does not compromise food production?"
            >
              <!---->
              <!---->
              <div
                class="h-full my-4 p-4 rounded-2xl border border-gray-200"
                data-testid="panel-component"
              >
                <article
                  class="flex gap-2 items-start relative flex-col-reverse sm:flex-row"
                >
                  <div
                    class="mt-0.5 hidden sm:block"
                  >
                    <div
                      data-testid="question-icon"
                    >
                      <svg
                        class="fill-secondary"
                        height="1.3rem"
                        role="img"
                        viewBox="0 -960 960 960"
                        width="1.3rem"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <!---->
                        <path
                          d="M478-240q21 0 35.5-14.5T528-290q0-21-14.5-35.5T478-340q-21 0-35.5 14.5T428-290q0 21 14.5 35.5T478-240Zm-36-154h74q0-33 7.5-52t42.5-52q26-26 41-49.5t15-56.5q0-56-41-86t-97-30q-57 0-92.5 30T342-618l66 26q5-18 22.5-39t53.5-21q32 0 48 17.5t16 38.5q0 20-12 37.5T506-526q-44 39-54 59t-10 73Zm38 314q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z"
                        />
                        
                        <!---->
                      </svg>
                      <!---->
                    </div>
                    <!---->
                  </div>
                   
                  <div
                    class="grow"
                    data-testid="horizontal-container"
                  >
                    <p
                      class="text-md leading-6"
                    >
                      <!---->
                      <!---->
                      Q2: Are there other ways in which we can ensure that development supports and does not compromise food production?
                      
                      
                      <!---->
                    </p>
                     
                    <div
                      class="text-sm leading-6 whitespace-nowrap"
                    >
                      125 responses
                    </div>
                     
                    <!---->
                    <!---->
                  </div>
                   
                  <div
                    class="-ml-2 sm:ml-0 -mt-1"
                  >
                    <div
                      class="flex items-center gap-1"
                    >
                      <div
                        class="ml-2 md:ml-0"
                      >
                        <!---->
                        <div />
                        
                        <!---->
                      </div>
                      <!---->
                       
                      <div
                        data-testid="fav-button"
                      >
                        <div>
                          <!---->
                          <button
                            aria-pressed="false"
                            class="text-md cursor-pointer rounded-md py-1 px-2 border border-transparent transition-colors duration-300 self-start inline-flex gap-1 items-center hover:bg-gray-100 svelte-1d0mdzt"
                            data-variant="ghost"
                            role="button"
                            tabindex="0"
                          >
                            <!---->
                            <!---->
                            <svg
                              class="fill-gray-500"
                              height="1.3rem"
                              role="img"
                              viewBox="0 -960 960 960"
                              width="1.3rem"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <!---->
                              <path
                                d="m354-287 126-76 126 77-33-144 111-96-146-13-58-136-58 135-146 13 111 97-33 143ZM233-120l65-281L80-590l288-25 112-265 112 265 288 25-218 189 65 281-247-149-247 149Zm247-350Z"
                              />
                              
                              <!---->
                            </svg>
                            
                            
                            
                          </button>
                          
                          <!---->
                        </div>
                      </div>
                    </div>
                    <!---->
                  </div>
                </article>
                <!---->
              </div>
              
              
              
            </div>
            
            
            
            
            <!---->
          </div>
          <div
            class="bg-white"
          >
            <!---->
            <!---->
            <!---->
            <!---->
            <div
              aria-label="Click to view question: What would be the most appropriate way to promote high percentage Social Rent/affordable housing developments?"
              class="transition-colors duration-300 block rounded-xl cursor-pointer hover:bg-gray-200"
              data-testid="Click to view question: What would be the most appropriate way to promote high percentage Social Rent/affordable housing developments?"
              role="button"
              tabindex="0"
              title="Q3: What would be the most appropriate way to promote high percentage Social Rent/affordable housing developments?"
            >
              <!---->
              <!---->
              <div
                class="h-full my-4 p-4 rounded-2xl border border-gray-200"
                data-testid="panel-component"
              >
                <article
                  class="flex gap-2 items-start relative flex-col-reverse sm:flex-row"
                >
                  <div
                    class="mt-0.5 hidden sm:block"
                  >
                    <div
                      data-testid="question-icon"
                    >
                      <svg
                        class="fill-secondary"
                        height="1.3rem"
                        role="img"
                        viewBox="0 -960 960 960"
                        width="1.3rem"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <!---->
                        <path
                          d="M478-240q21 0 35.5-14.5T528-290q0-21-14.5-35.5T478-340q-21 0-35.5 14.5T428-290q0 21 14.5 35.5T478-240Zm-36-154h74q0-33 7.5-52t42.5-52q26-26 41-49.5t15-56.5q0-56-41-86t-97-30q-57 0-92.5 30T342-618l66 26q5-18 22.5-39t53.5-21q32 0 48 17.5t16 38.5q0 20-12 37.5T506-526q-44 39-54 59t-10 73Zm38 314q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z"
                        />
                        
                        <!---->
                      </svg>
                      <!---->
                    </div>
                    <!---->
                  </div>
                   
                  <div
                    class="grow"
                    data-testid="horizontal-container"
                  >
                    <p
                      class="text-md leading-6"
                    >
                      <!---->
                      <!---->
                      Q3: What would be the most appropriate way to promote high percentage Social Rent/affordable housing developments?
                      
                      
                      <!---->
                    </p>
                     
                    <div
                      class="text-sm leading-6 whitespace-nowrap"
                    >
                      125 responses
                    </div>
                     
                    <!---->
                    <!---->
                  </div>
                   
                  <div
                    class="-ml-2 sm:ml-0 -mt-1"
                  >
                    <div
                      class="flex items-center gap-1"
                    >
                      <div
                        class="ml-2 md:ml-0"
                      >
                        <!---->
                        <div />
                        
                        <!---->
                      </div>
                      <!---->
                       
                      <div
                        data-testid="fav-button"
                      >
                        <div>
                          <!---->
                          <button
                            aria-pressed="false"
                            class="text-md cursor-pointer rounded-md py-1 px-2 border border-transparent transition-colors duration-300 self-start inline-flex gap-1 items-center hover:bg-gray-100 svelte-1d0mdzt"
                            data-variant="ghost"
                            role="button"
                            tabindex="0"
                          >
                            <!---->
                            <!---->
                            <svg
                              class="fill-gray-500"
                              height="1.3rem"
                              role="img"
                              viewBox="0 -960 960 960"
                              width="1.3rem"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <!---->
                              <path
                                d="m354-287 126-76 126 77-33-144 111-96-146-13-58-136-58 135-146 13 111 97-33 143ZM233-120l65-281L80-590l288-25 112-265 112 265 288 25-218 189 65 281-247-149-247 149Zm247-350Z"
                              />
                              
                              <!---->
                            </svg>
                            
                            
                            
                          </button>
                          
                          <!---->
                        </div>
                      </div>
                    </div>
                    <!---->
                  </div>
                </article>
                <!---->
              </div>
              
              
              
            </div>
            
            
            
            
            <!---->
          </div>
          
          <!---->
        </div>
      </div>
      
      <!---->
    </div>
    <!---->
  </section>
  <!---->
    
  <div>
     
    <div
      class="h-full my-4 p-4 rounded-2xl border border-gray-200"
      data-testid="panel-component"
    >
      <div
        class="flex items-center justify-start gap-2 rounded-lg bg-pink-50 p-2"
      >
        <!---->
         
        <div
          class="w-full text-pink-700"
        >
          Unexpected onboarding tour error
          <!---->
        </div>
      </div>
      <!---->
    </div>
    <!---->
  </div>
  <!---->
  
</div>
`;

exports[`ThemeSignOffArchive > should match snapshot initially 1`] = `
<div>
  <!---->
  <div
    class="flex gap-4"
  >
    <div
      class="flex items-center justify-center"
    >
      <div
        class="bg-pink-50 p-2 rounded-md"
      >
        <svg
          class="fill-pink-700"
          height="1.8rem"
          role="img"
          viewBox="0 -960 960 960"
          width="1.8rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <!---->
          <path
            d="M856-390 570-104q-12 12-27 18t-30 6q-15 0-30-6t-27-18L103-457q-11-11-17-25.5T80-513v-287q0-33 23.5-56.5T160-880h287q16 0 31 6.5t26 17.5l352 353q12 12 17.5 27t5.5 30q0 15-5.5 29.5T856-390ZM513-160l286-286-353-354H160v286l353 354ZM260-640q25 0 42.5-17.5T320-700q0-25-17.5-42.5T260-760q-25 0-42.5 17.5T200-700q0 25 17.5 42.5T260-640Zm220 160Z"
            xmlns="http://www.w3.org/2000/svg"
          />
          
          <!---->
        </svg>
        <!---->
      </div>
    </div>
    <!---->
     
    <div
      class="grow"
    >
      <!---->
      <h1
        class="text-neutral-700 text-2xl"
        style=""
      >
        <!---->
        Theme Sign Off
        
        
      </h1>
      
      <!---->
       
      <p
        class="text-neutral-600 text-md"
      >
        Finalise themes to use for AI to map responses to
      </p>
      <!---->
    </div>
     
    <!---->
  </div>
  <!---->
   
  <hr
    class="my-6"
  />
   
  <!---->
  
  <!---->
   
  <section
    class="my-8"
  >
    <div
      class="my-2"
      id="onboarding-step-1"
    >
      <div
        class="flex gap-4"
      >
        <div
          class="flex items-center justify-center"
        >
          <div
            class="bg-pink-50 p-2 rounded-md"
          >
            <svg
              class="fill-pink-700"
              height="1.3rem"
              role="img"
              viewBox="0 -960 960 960"
              width="1.3rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <!---->
              <path
                d="M478-240q21 0 35.5-14.5T528-290q0-21-14.5-35.5T478-340q-21 0-35.5 14.5T428-290q0 21 14.5 35.5T478-240Zm-36-154h74q0-33 7.5-52t42.5-52q26-26 41-49.5t15-56.5q0-56-41-86t-97-30q-57 0-92.5 30T342-618l66 26q5-18 22.5-39t53.5-21q32 0 48 17.5t16 38.5q0 20-12 37.5T506-526q-44 39-54 59t-10 73Zm38 314q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z"
              />
              
              <!---->
            </svg>
            <!---->
          </div>
        </div>
        <!---->
         
        <div
          class="grow"
        >
          <!---->
          <h2
            class="text-neutral-700 text-lg"
            style=""
          >
            <!---->
            All consultation questions
            
            
          </h2>
          
          <!---->
           
          <p
            class="text-neutral-600 text-sm"
          >
            Browse or search through all questions in this consultation.
          </p>
          <!---->
        </div>
         
        <div>
          <p
            slot="aside"
          >
            0 questions
          </p>
          <!---->
        </div>
        <!---->
      </div>
      <!---->
    </div>
     
    <div
      class="h-full my-4 p-4 rounded-2xl border border-gray-200 bg-neutral-50"
      data-testid="panel-component"
    >
      <!---->
      <div
        class="my-8"
      >
        <div
          class="animate-spin ease-in-out w-max m-auto"
          style="animation-timing-function: ease-in-out;"
        >
          <svg
            class="fill-neutral-300"
            height="5rem"
            role="img"
            viewBox="0 -960 960 960"
            width="5rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M480-80q-82 0-155-31.5t-127.5-86Q143-252 111.5-325T80-480q0-83 31.5-155.5t86-127Q252-817 325-848.5T480-880q17 0 28.5 11.5T520-840q0 17-11.5 28.5T480-800q-133 0-226.5 93.5T160-480q0 133 93.5 226.5T480-160q133 0 226.5-93.5T800-480q0-17 11.5-28.5T840-520q17 0 28.5 11.5T880-480q0 82-31.5 155t-86 127.5q-54.5 54.5-127 86T480-80Z"
              xmlns="http://www.w3.org/2000/svg"
            />
            <!---->
          </svg>
          <!---->
        </div>
        <!---->
         
        <p
          class="text-center text-neutral-500"
        >
          Loading questions...
        </p>
      </div>
      
      <!---->
    </div>
    <!---->
  </section>
  <!---->
    
  <div>
     
    <div
      class="h-full my-4 p-4 rounded-2xl border border-gray-200"
      data-testid="panel-component"
    >
      <div
        class="flex items-center justify-start gap-2 rounded-lg bg-pink-50 p-2"
      >
        <!---->
         
        <div
          class="w-full text-pink-700"
        >
          Unexpected onboarding tour error
          <!---->
        </div>
      </div>
      <!---->
    </div>
    <!---->
  </div>
  <!---->
  
</div>
`;
